--- a/css/styles.css
+++ b/css/styles.css
@@ -1,275 +1,215 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 img {
-    max-width: 300px;
+  max-width: 300px;
 }
-
-/* <!--Padre de la grilla de la pagina--> */
 
 .content-father {
-    display: grid;
-    height: 100vh;
-    width: 100%;
-    grid-template-areas:
-        "header header header"
-        "main main main"
-        "footer footer footer";
-    grid-template-columns: 40px 1fr 40px;
-    grid-template-rows: 80px 1fr 80px;
-    overflow-x: hidden;
-}
-
-
-/* <!-----Comienza el header y nav-bar vista mobile---->  */
-
-
-header {
-    grid-area: header;
-    border-bottom: 0px solid black;
-    box-shadow: 0 0.2rem 3rem -1rem;
-    background-color: #97a8c6;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 0;
-    width: 100%;
-}
-
-.menu-mobile {
-    display: none;
-    grid-area: header;
-}
-
-.logo {
-    max-height: 60px;
-    margin-left: 2%;
-    display: inline;
-    border-radius: 3%;
-    overflow: auto;
-    margin-left: -300px;
-
-}
-
-.botom-nav ul {
-    list-style-type: none;
-    padding-left: 400px;
-}
-
-.botom-nav li {
-    padding: 0px;
-    display: inline;
-    color: white;
-}
-
-.botom-nav a:hover {
-    text-decoration: underline red;
-    cursor: pointer;
-    border-radius: 4%;
-}
-
-.botom-nav a :visited {
-    color: black;
-}
-
-.botom-nav a {
-    color: black;
-    padding: 1rem;
-    text-decoration: none
-}
-
-/* <!-----Termina el header---->  */
-
-
-/* <!--Comienza Grids del index--> */
-.left-col-quienesomos {
-    grid-row: 3 / 4;
-    grid-column: 1 / span 2;
-    text-align: center;
-    background-color: #4d4949;
-}
-
-.caja-fotos-principales {
-    grid-row: 4;
-    grid-column: 1 / span 2;
-    text-align: center;
-    background-color: #4d4949;
-}
-
-.foto-primer-row {
-    grid-row: 2 / span 1;
-    grid-column: 2 / span 1;
-    text-align: center;
-}
-
-.titulo-main {
-    grid-column: 1 / span 2;
-    grid-row: 1;
-    text-align: center;
-}
-
-.primer-row {
-    grid-column: 1;
-    grid-row: 2;
-    text-align: center;
-    background-color: #3861a8;
-}
-
-.primer-rop h1 {
-    grid-row: 1;
-    grid-column: 1 / span 2;
-}
-
-.primer-row p {
-    margin-top: 15%;
-}
-
-/* <!--Termina grids del index--> */
-
-/* <!--Comienza main--> */
-main label {
-    display: block;
-}
-
-main img {
-    width: 400px;
+  display: grid;
+  height: 100vh;
+  width: 100%;
+  grid-template-areas: "header header header" "main main main" "footer footer footer";
+  grid-template-columns: 40px 1fr 40px;
+  grid-template-rows: 80px 1fr 80px;
+  overflow-x: hidden;
 }
 
 main {
-    display: grid;
-    grid-area: main;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 40px 1fr 1fr;
-    justify-content: center;
-
+  display: grid;
+  grid-area: main;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 40px 1fr 1fr;
+  justify-content: center;
+}
+main img {
+  width: 400px;
+}
+main label {
+  display: block;
 }
 
-/* <!--Termina main--> */
-
-
-/* <!--Comienza CSS trabajos-realizados--> */
-
-.titulo-tb-realizados {
-    grid-column: 1 / span 2;
-    grid-row: 1;
-    text-align: center;
+header {
+  grid-area: header;
+  border-bottom: 0px solid black;
+  box-shadow: 0 0.2rem 3rem -1rem;
+  background-color: #97a8c6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 0;
+  width: 100%;
 }
 
-.trabajos-realizados {
-    grid-column: 1 / span 2;
-    grid-row: 2 / span 4;
-    text-align: center;
+.menu-mobile {
+  display: none;
+  grid-area: header;
 }
 
-/* <!--Termina CSS trabajos-realizados--> */
-
-
-/* <!--Comienza CSS Contactanos--> */
-
-
-.titulo-contacto {
-    grid-column: 1 / span 2;
-    grid-row: 1;
-    text-align: center;
+.logo {
+  max-height: 60px;
+  margin-left: 2%;
+  display: inline;
+  border-radius: 3%;
+  overflow: auto;
+  margin-left: -300px;
 }
 
-.formulario-contacto {
-    margin-top: 5%;
-    grid-column: 1 / span 2;
-    grid-row: 2 / span 4;
-    text-align: center;
+.botom-nav ul {
+  list-style-type: none;
+  padding-left: 400px;
 }
-
-.custom-color-btn {
-    background-color: #97a8c6;
-
+.botom-nav li {
+  padding: 0px;
+  display: inline;
+  color: white;
 }
-
-/* <!--Termina CSS Contactanos--> */
-
-
-/* <!--Comienza CSS acerca-nosotros--> */
-
-.mision {
-    grid-column: 1 / span 2;
-    grid-row: 4;
-    text-align: center;
+.botom-nav a {
+  color: black;
+  padding: 1rem;
+  text-decoration: none;
 }
-
-.vision {
-    grid-column: 1 / span 2;
-    grid-row: 3;
-    text-align: center;
+.botom-nav a:hover {
+  text-decoration: underline red;
+  cursor: pointer;
+  border-radius: 4%;
 }
-
-.valores {
-    grid-column: 1 / span 2;
-    grid-row: 1;
-    text-align: center;
+.botom-nav a :visited {
+  color: black;
 }
-
-/* <!--Termina CSS acerca-nosotros--> */
-
-
-/* <!--media query vista mobile--> */
-
-@media (min-width: 320px) and (max-width: 480px) {
-    .menu-mobile {
-        display: block;
-        list-style: none;
-        width: 100%;
-
-    }
-
-    .custom-color-nav {
-        background-color: #97a8c6;
-    }
-
-    .custom-color-nav .nav-item {
-        background-color: #97a8c6;
-    }
-
-    header {
-        display: none;
-    }
-
-    .botom-nav {
-        display: none;
-    }
-
-    .logo {
-        display: none;
-    }
-
-}
-
-/* <!--Comienza footer--> */
 
 footer {
-    grid-area: footer;
-    top: auto;
-
+  grid-area: footer;
+  top: auto;
 }
 
 .iconos {
-    display: flex;
-    min-height: 7rem;
-    justify-content: flex-end;
-    border: 2px solid rgba(0, 0, 0, 0.165);
-    background-color: #97a8c6;
+  display: flex;
+  min-height: 7rem;
+  justify-content: flex-end;
+  border: 2px solid rgba(0, 0, 0, 0.165);
+  background-color: #97a8c6;
 }
-
 .iconos img {
-    max-width: 20px;
-    max-height: 20px;
-    margin-left: 1rem;
-    display: inline-block;
-
+  max-width: 20px;
+  max-height: 20px;
+  margin-left: 1rem;
+  display: inline-block;
 }
-
 .iconos p {
-    margin-left: 0.9rem;
+  margin-left: 0.9rem;
 }
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .menu-mobile {
+    display: block;
+    list-style: none;
+    width: 100%;
+  }
+  .custom-color-nav {
+    background-color: #97a8c6;
+  }
+  .custom-color-nav .nav-item {
+    background-color: #97a8c6;
+  }
+  header {
+    display: none;
+  }
+  .botom-nav {
+    display: none;
+  }
+  .logo {
+    display: none;
+  }
+}
+.mision {
+  grid-column: 1/span 2;
+  grid-row: 4;
+  text-align: center;
+}
+
+.vision {
+  grid-column: 1/span 2;
+  grid-row: 3;
+  text-align: center;
+}
+
+.valores {
+  grid-column: 1/span 2;
+  grid-row: 1;
+  text-align: center;
+}
+
+.titulo-contacto {
+  grid-column: 1/span 2;
+  grid-row: 1;
+  text-align: center;
+}
+
+.formulario-contacto {
+  margin-top: 5%;
+  grid-column: 1/span 2;
+  grid-row: 2/span 4;
+  text-align: center;
+}
+
+.custom-color-btn {
+  background-color: #97a8c6;
+}
+
+.left-col-quienesomos {
+  grid-row: 3/4;
+  grid-column: 1/span 2;
+  text-align: center;
+  background-color: #4d4949;
+}
+
+.caja-fotos-principales {
+  grid-row: 4;
+  grid-column: 1/span 2;
+  text-align: center;
+  background-color: #4d4949;
+}
+
+.foto-primer-row {
+  grid-row: 2/span 1;
+  grid-column: 2/span 1;
+  text-align: center;
+}
+
+.titulo-main {
+  grid-column: 1/span 2;
+  grid-row: 1;
+  text-align: center;
+}
+
+.primer-row {
+  grid-column: 1;
+  grid-row: 2;
+  text-align: center;
+  background-color: #3861a8;
+}
+.primer-row h1 {
+  grid-row: 1;
+  grid-column: 1/span 2;
+}
+.primer-row p {
+  margin-top: 15%;
+}
+
+.titulo-tb-realizados {
+  grid-column: 1/span 2;
+  grid-row: 1;
+  text-align: center;
+}
+
+.trabajos-realizados {
+  grid-column: 1/span 2;
+  grid-row: 2/span 4;
+  text-align: center;
+}
+
+/*# sourceMappingURL=styles.css.map */
