--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -2,7 +2,7 @@ header {
     grid-area: header;
     border-bottom: 0px solid black;
     box-shadow: 0 0.2rem 3rem -1rem;
-    background-color: #97a8c6;
+    background-color:$color-principal;
     display: flex;
     justify-content: center;
     align-items: center;
