--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -25,6 +25,7 @@
 }
 
 .primer-row {
+    margin-top: 1rem;
     grid-column: 1;
     grid-row: 2;
     text-align: center;
@@ -38,6 +39,7 @@
 
     p {
         margin-top: 15%;
+        color: white;
     }
     
 }
