--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-img {
-  max-width: 300px;
-}
-
 .content-father {
   display: grid;
   height: 100vh;
@@ -25,11 +21,12 @@ main {
   grid-template-rows: 40px 1fr 1fr;
   justify-content: center;
 }
-main img {
-  width: 400px;
-}
 main label {
   display: block;
+}
+
+img {
+  max-width: 300px;
 }
 
 header {
@@ -69,16 +66,16 @@ header {
 }
 .botom-nav a {
   color: black;
-  padding: 1rem;
   text-decoration: none;
+  padding: 1rem;
+  margin: 2rem;
 }
 .botom-nav a:hover {
   text-decoration: underline red;
   cursor: pointer;
   border-radius: 4%;
-}
-.botom-nav a :visited {
-  color: black;
+  transition-duration: 0.6s;
+  margin: 0rem;
 }
 
 footer {
@@ -115,13 +112,13 @@ footer {
   .custom-color-nav .nav-item {
     background-color: #97a8c6;
   }
-  .custom-color-nav header {
+  header {
     display: none;
   }
-  .custom-color-nav .botom-nav {
-    display: none;
+  .botom-nav {
+    display: hidden;
   }
-  .custom-color-nav .logo {
+  .logo {
     display: none;
   }
 }
@@ -165,6 +162,7 @@ footer {
   grid-column: 1/span 2;
   text-align: center;
   background-color: #4d4949;
+  margin-top: 0;
 }
 
 .caja-fotos-principales {
@@ -175,8 +173,17 @@ footer {
 }
 
 .foto-primer-row {
-  grid-row: 2/span 1;
-  grid-column: 2/span 1;
+  margin-top: 1rem;
+  background-image: url(../images/bakcground.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  animation-name: slider2;
+  animation-duration: 2.7s;
+}
+
+.titulo-main {
+  grid-column: 1/span 2;
+  grid-row: 1;
   text-align: center;
 }
 
@@ -192,16 +199,66 @@ footer {
   grid-row: 2;
   text-align: center;
   background-color: #3861a8;
+  animation-name: slider;
+  animation-duration: 2.7s;
+  transition-timing-function: cubic-bezier(0, 2, 1, 0.1);
 }
 .primer-row h1 {
   grid-row: 1;
   grid-column: 1/span 2;
 }
 .primer-row p {
-  margin-top: 15%;
+  margin-top: 20%;
   color: white;
+  font-family: "ABeeZee", sans-serif;
+  animation-name: zoomout;
+  animation-delay: 1.5s;
+  animation-duration: 2s;
+  animation-fill-mode: both;
 }
 
+@keyframes zoomout {
+  from {
+    display: hidden;
+    transform: scale(0);
+  }
+  to {
+    display: block;
+    transform: scale(1);
+  }
+}
+@keyframes slider {
+  from {
+    margin-right: 20rem;
+  }
+  to {
+    margin-right: 0rem;
+  }
+}
+@keyframes slider2 {
+  from {
+    margin-left: 20rem;
+  }
+  to {
+    margin-left: 0rem;
+  }
+}
+@media (min-width: 320px) and (max-width: 480px) {
+  .primer-row {
+    grid-column: 1/span 2;
+    max-height: 400px;
+  }
+  .primer-row p {
+    margin-top: 10px;
+  }
+  .foto-primer-row {
+    display: none;
+  }
+  main {
+    grid-template-rows: auto;
+    grid-auto-flow: dense;
+  }
+}
 .titulo-tb-realizados {
   grid-column: 1/span 2;
   grid-row: 1;
