--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -3,6 +3,7 @@
     grid-column: 1 / span 2;
     text-align: center;
     background-color: #4d4949;
+    margin-top: 0;
 }
 
 .caja-fotos-principales {
@@ -13,10 +14,19 @@
 }
 
 .foto-primer-row {
-    grid-row: 2 / span 1;
-    grid-column: 2 / span 1;
-    text-align: center;
+    margin-top: 1rem;
+    background-image: url(../images/bakcground.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    animation-name: slider2;
+    animation-duration: 2.7s;
 }
+
+.titulo-main {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+    text-align: center;}
+
 
 .titulo-main {
     grid-column: 1 / span 2;
@@ -30,6 +40,10 @@
     grid-row: 2;
     text-align: center;
     background-color: #3861a8;
+    animation-name: slider;
+    animation-duration: 2.7s;
+    transition-timing-function: cubic-bezier(0,2,1,.1);
+    
 
 
     h1 {
@@ -38,9 +52,68 @@
     }
 
     p {
-        margin-top: 15%;
+        margin-top: 20%;
         color: white;
+        font-family: 'ABeeZee', sans-serif;
+        animation-name: zoomout;
+        animation-delay: 1.5s ;
+        animation-duration: 2s;
+        animation-fill-mode: both;
     }
     
 }
 
+
+@keyframes zoomout{
+
+    from {
+        display: hidden;
+        transform: scale(0);
+    }
+
+    to{
+        display: block;
+    transform: scale(1);
+    }
+}
+
+@keyframes slider{
+    from {
+        margin-right: 20rem;
+    }
+
+    to{
+        margin-right: 0rem;
+    }
+}
+
+@keyframes slider2{
+    from {
+        margin-left: 20rem;
+    }
+
+    to{
+        margin-left: 0rem;
+    }
+}
+
+
+@media (min-width: 320px) and (max-width: 480px) {
+    .primer-row{
+        grid-column: 1 / span 2;
+        max-height: 400px;
+
+        & p{
+            margin-top: 10px;
+        }
+    }
+
+    .foto-primer-row{
+        display: none;
+    }
+ 
+    main{ 
+        grid-template-rows: auto;
+        grid-auto-flow: dense;
+    }
+}
