--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,28 @@ footer {
   margin-top: 0;
 }
 
+.container-img {
+  display: flex;
+  max-height: 400px;
+  max-width: 400px;
+  object-fit: cover;
+  margin-left: 30%;
+  gap: 15px;
+}
+.container-img img:hover {
+  filter: blur(4px) drop-shadow(0px 16px 5px #000000);
+  -webkit-filter: blur(4px) drop-shadow(0px 16px 5px #000000);
+  -moz-filter: blur(4px) drop-shadow(0px 16px 5px #000000);
+}
+
+.container-clientes {
+  display: flex;
+  max-height: 150px;
+  object-fit: cover;
+  margin-left: 28%;
+  gap: 15px;
+}
+
 .caja-fotos-principales {
   grid-row: 4;
   grid-column: 1/span 2;
@@ -267,8 +289,18 @@ footer {
 
 .trabajos-realizados {
   grid-column: 1/span 2;
-  grid-row: 2/span 4;
+  display: grid;
   text-align: center;
+}
+
+.card-trabajos {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 5px;
+}
+
+.card-trabajos:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 /*# sourceMappingURL=styles.css.map */
