--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,6 @@ main {
   grid-area: main;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 40px 1fr 1fr;
-  justify-content: center;
 }
 main label {
   display: block;
@@ -123,20 +122,16 @@ footer {
   }
 }
 .mision {
-  grid-column: 1/span 2;
-  grid-row: 4;
   text-align: center;
 }
 
 .vision {
-  grid-column: 1/span 2;
-  grid-row: 3;
   text-align: center;
 }
 
 .valores {
   grid-column: 1/span 2;
-  grid-row: 1;
+  grid-row: 3;
   text-align: center;
 }
 
@@ -161,7 +156,6 @@ footer {
   grid-row: 3/4;
   grid-column: 1/span 2;
   text-align: center;
-  background-color: #4d4949;
   margin-top: 0;
 }
 
@@ -173,17 +167,12 @@ footer {
   margin-left: 30%;
   gap: 15px;
 }
-.container-img img:hover {
-  filter: blur(4px) drop-shadow(0px 16px 5px #000000);
-  -webkit-filter: blur(4px) drop-shadow(0px 16px 5px #000000);
-  -moz-filter: blur(4px) drop-shadow(0px 16px 5px #000000);
-}
 
 .container-clientes {
   display: flex;
   max-height: 150px;
   object-fit: cover;
-  margin-left: 28%;
+  margin-left: 30%;
   gap: 15px;
 }
 
@@ -191,7 +180,6 @@ footer {
   grid-row: 4;
   grid-column: 1/span 2;
   text-align: center;
-  background-color: #4d4949;
 }
 
 .foto-primer-row {
@@ -289,18 +277,29 @@ footer {
 
 .trabajos-realizados {
   grid-column: 1/span 2;
+  grid-row: 2/span 3;
   display: grid;
   text-align: center;
+  justify-items: center;
+  margin-top: 6rem;
+  gap: 20px;
 }
 
 .card-trabajos {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   border-radius: 5px;
+  max-width: 20%;
 }
 
 .card-trabajos:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .card-trabajos {
+    max-width: 100%;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
