--- a/scss/pages/_trabajos-realizados.scss
+++ b/scss/pages/_trabajos-realizados.scss
@@ -6,8 +6,13 @@
 
 .trabajos-realizados {
     grid-column: 1 / span 2;
+    grid-row: 2 / span 3;
     display: grid;
     text-align: center;
+    justify-items: center;
+    margin-top: 6rem;
+    gap: 20px;
+
 }
 
 
@@ -15,9 +20,19 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     border-radius: 5px;
+    max-width: 20%;
 }
 
   
   .card-trabajos:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  }
+
+
+
+  @media (min-width: 320px) and (max-width: 480px) {
+
+      .card-trabajos{
+        max-width: 100%;
+    }
   }
