Se añade slider en las fotos del index

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,7 @@ header {
 .menu-mobile {
   display: none;
   grid-area: header;
+  z-index: 1;
 }
 
 .logo {
@@ -135,6 +136,21 @@ footer {
   text-align: center;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  .mision {
+    grid-column: 1/span 2;
+    text-align: center;
+  }
+  .vision {
+    grid-row: 2;
+    text-align: center;
+    grid-column: 1/span 2;
+  }
+  .valores {
+    grid-column: 1/span 2;
+    text-align: center;
+  }
+}
 .titulo-contacto {
   grid-column: 1/span 2;
   grid-row: 1;
@@ -156,7 +172,7 @@ footer {
   grid-row: 3/4;
   grid-column: 1/span 2;
   text-align: center;
-  margin-top: 0;
+  margin-left: 15%;
 }
 
 .container-img {
@@ -164,7 +180,6 @@ footer {
   max-height: 400px;
   max-width: 400px;
   object-fit: cover;
-  margin-left: 30%;
   gap: 15px;
 }
 
@@ -180,6 +195,7 @@ footer {
   grid-row: 4;
   grid-column: 1/span 2;
   text-align: center;
+  margin-left: 15%;
 }
 
 .foto-primer-row {
@@ -260,6 +276,34 @@ footer {
   }
   .primer-row p {
     margin-top: 10px;
+  }
+  .left-col-quienesomos {
+    margin: 0;
+  }
+  .caja-fotos-principales {
+    margin: 0;
+  }
+  .container-img {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    margin: 0;
+  }
+  .container-img img {
+    flex: 0 0 100%;
+    width: 100%;
+    object-fit: cover;
+    scroll-snap-align: center;
+  }
+  .container-clientes {
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+    margin: 0;
   }
   .foto-primer-row {
     display: none;
