--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -2,7 +2,6 @@
     grid-row: 3 / 4;
     grid-column: 1 / span 2;
     text-align: center; 
-    margin-left: 15%;
 }
 
 .container-img {
@@ -11,6 +10,7 @@
     max-width: 400px;
     object-fit: cover;
     gap: 15px;
+    margin-left: 30%;
 
 }
 
@@ -18,6 +18,7 @@
     display: flex;
     max-height: 150px;
     object-fit: cover;
+    text-align: center;
     margin-left: 30%;
     gap: 15px;
 }
@@ -26,7 +27,6 @@
     grid-row: 4;
     grid-column: 1 / span 2;
     text-align: center;
-    margin-left: 15%;
 
 }
 
@@ -154,7 +154,6 @@
     .container-clientes{
         display: flex;
         width: 100%;
-        height: 100vh;
         overflow-x: scroll;
         scroll-snap-type: x mandatory;
         margin: 0; 
