--- a/css/styles.css
+++ b/css/styles.css
@@ -52,12 +52,10 @@ header {
   display: inline;
   border-radius: 3%;
   overflow: auto;
-  margin-left: -300px;
 }
 
 .botom-nav ul {
   list-style-type: none;
-  padding-left: 400px;
 }
 .botom-nav li {
   padding: 0px;
@@ -78,6 +76,28 @@ header {
   margin: 0rem;
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  .menu-mobile {
+    display: block;
+    list-style: none;
+    width: 100%;
+  }
+  .custom-color-nav {
+    background-color: #97a8c6;
+  }
+  .custom-color-nav .nav-item {
+    background-color: #97a8c6;
+  }
+  header {
+    display: none;
+  }
+  .botom-nav {
+    display: hidden;
+  }
+  .logo {
+    display: none;
+  }
+}
 footer {
   grid-area: footer;
   top: auto;
@@ -170,18 +190,17 @@ footer {
 }
 
 .left-col-quienesomos {
-  grid-row: 3/4;
   grid-column: 1/span 2;
   text-align: center;
+  margin: 0 auto;
 }
 
 .container-img {
   display: flex;
   max-height: 400px;
-  max-width: 400px;
   object-fit: cover;
+  text-align: center;
   gap: 15px;
-  margin-left: 23%;
 }
 
 .container-clientes {
@@ -189,7 +208,6 @@ footer {
   max-height: 150px;
   object-fit: cover;
   text-align: center;
-  margin-left: 23%;
   gap: 15px;
 }
 
@@ -197,6 +215,7 @@ footer {
   grid-row: 4;
   grid-column: 1/span 2;
   text-align: center;
+  margin: 0 auto;
 }
 
 .foto-primer-row {
@@ -270,6 +289,19 @@ footer {
     margin-left: 0rem;
   }
 }
+@media (min-width: 320px) and (max-width: 968px) {
+  .container-img {
+    display: flex;
+    width: 100%;
+    overflow-x: scroll;
+  }
+  .container-img img {
+    flex: 0 0 100%;
+    width: 100%;
+    object-fit: cover;
+    scroll-snap-align: center;
+  }
+}
 @media (min-width: 320px) and (max-width: 480px) {
   .primer-row {
     grid-column: 1/span 2;
@@ -278,33 +310,6 @@ footer {
   .primer-row p {
     margin-top: 10px;
   }
-  .left-col-quienesomos {
-    margin: 0;
-  }
-  .caja-fotos-principales {
-    margin: 0;
-  }
-  .container-img {
-    display: flex;
-    width: 100%;
-    height: 100vh;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    margin: 0;
-  }
-  .container-img img {
-    flex: 0 0 100%;
-    width: 100%;
-    object-fit: cover;
-    scroll-snap-align: center;
-  }
-  .container-clientes {
-    display: flex;
-    width: 100%;
-    overflow-x: scroll;
-    scroll-snap-type: x mandatory;
-    margin: 0;
-  }
   .foto-primer-row {
     display: none;
   }
@@ -312,7 +317,21 @@ footer {
     grid-template-rows: auto;
     grid-auto-flow: dense;
   }
+  .left-col-quienesomos {
+    margin: 0;
+  }
+  .caja-fotos-principales {
+    margin: 0;
+  }
 }
+.container-clientes {
+  display: flex;
+  width: 100%;
+  overflow-x: scroll;
+  scroll-snap-type: x mandatory;
+  margin: 0;
+}
+
 .titulo-tb-realizados {
   grid-column: 1/span 2;
   grid-row: 1;
