--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,14 @@ img {
   max-width: 300px;
 }
 
+.color-fuente h2 {
+  background-color: black;
+  color: white;
+}
+.color-fuente p {
+  font-family: "ABeeZee", sans-serif;
+}
+
 header {
   grid-area: header;
   border-bottom: 0px solid black;
@@ -142,19 +150,41 @@ footer {
     display: none;
   }
 }
+.centrado {
+  padding-top: 10%;
+}
+
+.titulo-acerca-nosotros {
+  grid-row: 1;
+  grid-column: 1/span 2;
+  text-align: center;
+}
+
 .mision {
+  margin-top: 10%;
+  grid-row: 2;
+  text-align: center;
+}
+.mision-img {
+  grid-row: 2;
+  grid-column: 2;
   text-align: center;
 }
 
 .vision {
+  grid-row: 3;
+  text-align: center;
+}
+.vision-img {
+  grid-row: 3;
+  grid-column: 2;
   text-align: center;
 }
 
 .valores {
   grid-column: 1/span 2;
-  grid-row: 3;
+  grid-row: 4;
   text-align: center;
-  list-style: none;
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
@@ -162,13 +192,23 @@ footer {
     grid-column: 1/span 2;
     text-align: center;
   }
+  .mision-img {
+    grid-row: 3;
+    grid-column: 1/span 2;
+  }
   .vision {
-    grid-row: 2;
+    grid-row: 4;
     text-align: center;
+    grid-column: 1/span 2;
+  }
+  .vision-img {
+    margin-top: 45%;
+    grid-row: 4;
     grid-column: 1/span 2;
   }
   .valores {
     grid-column: 1/span 2;
+    grid-row: 5;
     text-align: center;
   }
 }
@@ -204,11 +244,7 @@ footer {
 }
 
 .container-clientes {
-  display: flex;
   max-height: 150px;
-  object-fit: cover;
-  text-align: center;
-  gap: 15px;
 }
 
 .caja-fotos-principales {
