Se agrega estilo y imagenes con su descricion y texto alternativo en trabajos-realizados

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -25,12 +25,15 @@ main {
     grid-area: main;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 40px 1fr 1fr;
+    grid-template-rows: auto;
+    grid-auto-flow: dense;
+}
 
 
     label {
         display: block;
     }
-}
+
 
 $color-principal: #97a8c6;
 
