--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,11 @@ main {
   grid-area: main;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 40px 1fr 1fr;
+  grid-template-rows: auto;
+  grid-auto-flow: dense;
 }
-main label {
+
+label {
   display: block;
 }
 
@@ -242,6 +245,9 @@ footer {
   text-align: center;
   gap: 15px;
 }
+.container-img img {
+  border-radius: 10%;
+}
 
 .container-clientes {
   max-height: 150px;
@@ -349,10 +355,6 @@ footer {
   .foto-primer-row {
     display: none;
   }
-  main {
-    grid-template-rows: auto;
-    grid-auto-flow: dense;
-  }
   .left-col-quienesomos {
     margin: 0;
   }
@@ -375,26 +377,38 @@ footer {
 }
 
 .trabajos-realizados {
-  grid-column: 1/span 2;
-  grid-row: 2/span 3;
   display: grid;
+  grid-column: 1/span 2;
   text-align: center;
-  justify-items: center;
-  margin-top: 6rem;
-  gap: 20px;
+  gap: 30px;
+}
+.trabajos-realizados-col1 {
+  grid-column: 1;
+}
+.trabajos-realizados-col2 {
+  grid-column: 2;
 }
 
 .card-trabajos {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  border-radius: 5px;
-  max-width: 20%;
+  border-radius: 10px;
+  margin: 10%;
+  min-height: 300px;
 }
 
 .card-trabajos:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 16px 10px rgba(0, 0, 0, 0.2);
 }
 
+@media (min-width: 320px) and (max-width: 780px) {
+  .trabajos-realizados-col1 {
+    grid-column: 1;
+  }
+  .trabajos-realizados-col2 {
+    grid-column: 1;
+  }
+}
 @media (min-width: 320px) and (max-width: 480px) {
   .card-trabajos {
     max-width: 100%;
