Se agrega favicon a todos los html,se linkea al index el logo del header, se crea y estiliza servicios.scss y ademas se corrige responsive del header

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -30,9 +30,9 @@ main {
 }
 
 
-    label {
-        display: block;
-    }
+label {
+    display: block;
+}
 
 
 $color-principal: #97a8c6;
@@ -40,6 +40,7 @@ $color-principal: #97a8c6;
 
 img {
     max-width: 300px;
+    max-height: 225px;
 }
 
 .color-fuente {
@@ -51,4 +52,4 @@ img {
     p {
         font-family: 'ABeeZee', sans-serif;
     }
-    }
+}
