--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ label {
 
 img {
   max-width: 300px;
+  max-height: 225px;
 }
 
 .color-fuente h2 {
@@ -65,6 +66,10 @@ header {
   overflow: auto;
 }
 
+.logo-mobile {
+  max-height: 60px;
+}
+
 .botom-nav ul {
   list-style-type: none;
 }
@@ -87,6 +92,12 @@ header {
   margin: 0rem;
 }
 
+@media (min-width: 320px) and (max-width: 567px) {
+  .botom-nav a {
+    padding: 0;
+    margin: 1rem;
+  }
+}
 @media (min-width: 320px) and (max-width: 480px) {
   .menu-mobile {
     display: block;
@@ -222,20 +233,27 @@ footer {
 }
 
 .formulario-contacto {
-  margin-top: 5%;
   grid-column: 1/span 2;
-  grid-row: 2/span 4;
-  text-align: center;
+  padding-left: 18%;
 }
 
 .custom-color-btn {
   background-color: #97a8c6;
 }
 
+@media (min-width: 320px) and (max-width: 758px) {
+  .formulario-contacto {
+    padding: 0;
+  }
+}
 .left-col-quienesomos {
   grid-column: 1/span 2;
   text-align: center;
   margin: 0 auto;
+  padding-bottom: 1%;
+}
+.left-col-quienesomos a {
+  margin-top: 3%;
 }
 
 .container-img {
@@ -290,13 +308,14 @@ footer {
   animation-name: slider;
   animation-duration: 2.7s;
   transition-timing-function: cubic-bezier(0, 2, 1, 0.1);
+  padding: 10% 0 10% 0%;
 }
 .primer-row h1 {
   grid-row: 1;
   grid-column: 1/span 2;
 }
 .primer-row p {
-  margin-top: 20%;
+  margin-top: 10%;
   color: white;
   font-family: "ABeeZee", sans-serif;
   animation-name: zoomout;
@@ -396,6 +415,10 @@ footer {
   margin: 10%;
   min-height: 300px;
 }
+.card-trabajos img {
+  width: auto;
+  height: auto;
+}
 
 .card-trabajos:hover {
   box-shadow: 0 10px 16px 10px rgba(0, 0, 0, 0.2);
@@ -412,6 +435,63 @@ footer {
 @media (min-width: 320px) and (max-width: 480px) {
   .card-trabajos {
     max-width: 100%;
+  }
+}
+.titulo-servicios {
+  grid-column: 1/span 2;
+  grid-row: 1;
+  text-align: center;
+  margin-bottom: 0;
+}
+
+.servicios {
+  display: grid;
+  grid-row: 2;
+  grid-column: 1/span 2;
+  text-align: center;
+  padding-bottom: 10%;
+}
+.servicios img {
+  max-height: 400px;
+  max-width: 400px;
+  box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 10px;
+}
+
+.img-wrap {
+  margin-right: 20px;
+  padding: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.text-overlay {
+  display: flex;
+  max-width: 50%;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  transition: opacity 0.3s;
+}
+
+@media (min-width: 320px) and (max-width: 1300px) {
+  .img-wrap {
+    display: grid;
+    justify-items: center;
+    padding: 0;
+    padding-top: 10%;
+    width: 100%;
+  }
+  .text-overlay {
+    margin-top: 10%;
+    max-width: 100%;
+  }
+}
+@media (min-width: 320px) and (max-width: 720px) {
+  .servicios img {
+    max-width: 330px;
   }
 }
 
