--- a/scss/pages/_contactanos.scss
+++ b/scss/pages/_contactanos.scss
@@ -5,13 +5,22 @@
 }
 
 .formulario-contacto {
-    margin-top: 5%;
     grid-column: 1 / span 2;
-    grid-row: 2 / span 4;
-    text-align: center;
+    padding-left: 18%;
+
 }
+
+
 
 .custom-color-btn {
     background-color: #97a8c6;
 
+}
+
+
+
+@media (min-width: 320px) and (max-width: 758px) {
+    .formulario-contacto {
+        padding: 0;
+    }
 }
