--- a/scss/pages/_trabajos-realizados.scss
+++ b/scss/pages/_trabajos-realizados.scss
@@ -10,45 +10,51 @@
     text-align: center;
     gap: 30px;
 
-    &-col1{
+    &-col1 {
         grid-column: 1;
     }
-    &-col2{
+
+    &-col2 {
         grid-column: 2;
     }
 
 }
 
-.card-trabajos{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+.card-trabajos {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
     border-radius: 10px;
     margin: 10%;
     min-height: 300px;
+
+    & img {
+        width: auto;
+        height: auto;
+    }
 }
 
-  
-  .card-trabajos:hover {
-    box-shadow: 0 10px 16px 10px rgba(0,0,0,0.2);
-  }
 
-
-  @media (min-width: 320px) and (max-width: 780px) {
-    .trabajos-realizados{
-        &-col1{
-            grid-column: 1;
-        }
-        &-col2{
-            grid-column: 1;
-        }
-  }
+.card-trabajos:hover {
+    box-shadow: 0 10px 16px 10px rgba(0, 0, 0, 0.2);
 }
 
-  @media (min-width: 320px) and (max-width: 480px) {
-    
 
-      .card-trabajos{
+@media (min-width: 320px) and (max-width: 780px) {
+    .trabajos-realizados {
+        &-col1 {
+            grid-column: 1;
+        }
+
+        &-col2 {
+            grid-column: 1;
+        }
+    }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+
+
+    .card-trabajos {
         max-width: 100%;
-    }}
-
-  
+    }
+}
