Se estiliza li de la clase valores en acerca-nosotros

--- a/css/styles.css
+++ b/css/styles.css
@@ -215,6 +215,10 @@ footer {
   grid-row: 4;
   text-align: center;
 }
+.valores li {
+  list-style: none;
+  font-family: "ABeeZee", sans-serif;
+}
 
 @media (min-width: 320px) and (max-width: 480px) {
   .mision {
