--- a/scss/pages/_acerca-nosotros.scss
+++ b/scss/pages/_acerca-nosotros.scss
@@ -38,6 +38,11 @@
     grid-column: 1 / span 2;
     grid-row: 4;
     text-align: center;
+
+    li{
+        list-style: none;
+        font-family: 'ABeeZee', sans-serif;
+    }
 }
 
 
