--- a/scss/pages/_acerca-nosotros.scss
+++ b/scss/pages/_acerca-nosotros.scss
@@ -39,6 +39,10 @@
     grid-row: 4;
     text-align: center;
 
+    ul{
+        padding-left: 0;
+    }
+
     li{
         list-style: none;
         font-family: 'ABeeZee', sans-serif;
