--- a/css/styles.css
+++ b/css/styles.css
@@ -226,6 +226,7 @@ footer {
     text-align: center;
   }
   .mision-img {
+    padding-top: 5%;
     grid-row: 3;
     grid-column: 1/span 2;
   }
@@ -235,7 +236,8 @@ footer {
     grid-column: 1/span 2;
   }
   .vision-img {
-    margin-top: 45%;
+    padding-top: 20%;
+    margin-top: 50%;
     grid-row: 4;
     grid-column: 1/span 2;
   }
